# sakura

./: .gitignore  Makefile  README.md
kernel/: Cargo.toml  x86_64-sakuraos-eabi.json
kernel/.cargo/: config.toml
kernel/src/: arch.rs  kalloc.rs  main.rs
kernel/src/arch/: riscv64.rs  x86_64.rs
kernel/src/arch/riscv64/: exception.rs  handler.rs  linker.ld  print.rs  sbi.rs  uart.rs
kernel/src/arch/x86_64/: handler.rs  uart.rs
loader/: Cargo.toml
loader/.cargo/: config.toml
loader/src/: main.rs
