[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = {version = "0.7.4", features = ["nightly"], default-features = false}
uefi = {version ="0.24.0", features = ["alloc"]}
uefi-services = "0.21.0"
